tests/e2e/function_call_invalid_path.error
Error: syntax error in story at line 1, column 5

1|    c = a.b (key: 2)
          ^

E0101: Variable `a` has not been defined.
