tests/e2e/function_call_invalid_path.story
c = a.b (key: 2)
